--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,22 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist",
+    "target": "es5",
+    "module": "es2015",
     "sourceMap": true,
-    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "declaration": true,
+    "outDir": "./dist",
     "lib": [
-      "es2016",
+      "es2015",
       "dom"
     ]
   },
   "files": [
     "./src/app/ng-autocomplete/ng-autocomplete.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true
+  }
 }
