--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "copy": "node tools/copy-package.js && node tools/cleanup-package.js",
+    "copy": "node tools/copy-package.js",
     "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc",
     "build": "npm run bundle && npm run copy",
     "publish": "cd ./dist && npm publish",
