--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "ng": "ng",
     "start": "ng serve",
     "copy": "node tools/copy-package.js",
-    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc",
+    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && node_modules/.bin/ngc -p src/app/ng-autocomplete/tsconfig.json",
     "build": "npm run bundle && npm run copy",
     "publish": "cd ./dist && npm publish",
+    "postbundle": "node tools/remove-code.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
