--- a/projects/ng-auto-complete/package.json
+++ b/projects/ng-auto-complete/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "ng-auto-complete",
-  "version": "4.1.2",
-  "peerDependencies": {
-    "@angular/common": "^7.1.1",
-    "@angular/core": "^7.1.1"
-  }
+    "name": "ng-auto-complete",
+    "version": "4.1.3",
+    "homepage": "https://github.com/sengirab/ngAutocomplete",
+    "url": "https://github.com/sengirab/ngAutocomplete/issues",
+    "email": "benjaminbloot@gmail.com",
+    "license": "(MIT OR Apache-2.0)",
+    "peerDependencies": {
+        "@angular/common": "^7.1.1",
+        "@angular/core": "^7.1.1"
+    }
 }
